<resources>
    <string name="app_name">Confined</string>
    <string name="start">Start</string>
    <string name="stay_home_amp_safe"><![CDATA[STAY SAFE AT HOME !]]></string>
    <string name="infected">Infected</string>
    <string name="numberInfect">400000</string>
    <string name="numberRecovered">Recovered</string>
    <string name="recovered">Recovered</string>
    <string name="covid_19">COVID-19</string>
    <string name="world_data">World Data</string>
    <string name="symptoms">Common Symptoms</string>
    <string name="view_all">View All</string>
    <string name="precautions">Precautions</string>
    <string name="fever">FEVER</string>
    <string name="list_menu_country">List of Countries Infected</string>
    <string name="to_fight_boredom">To Fight Boredom</string>
    <string name="more_info">More info</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="confined">Confined</string>
    <string name="moreinfo">To have more infos go on :
        https://www.pasteur.fr/en/press-area/coronavirus-all-covid-19-news-institut-pasteur.
        App made for confined people during COVID-19 pandemia.</string>
    <string name="search">Search</string>
    <string name="item">Item</string>
    <string name="deceased">Deceased</string>
    <string name="todo">TODO</string>
    <string name="detail_text_description">detail_text_Description</string>
    <string name="details_text_description">TextView</string>
    <string name="search_hint">Type name…</string>
    <string name="precautiontips">precautiontips</string>
</resources>
