<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigate_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_country"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/list_menu_country" />
        <item
            android:id="@+id/nav_bored"
            android:icon="@drawable/ic_mood_bored"
            android:title="@string/to_fight_boredom" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/more_info" />
    </group>


</menu>