<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBlue"
    android:layout_height="match_parent"
    tools:context=".presentation.view.InitScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/contLayoutStart"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="100dp"
            android:src="@drawable/stay"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:fontFamily="casual"
            android:text="@string/stay_home_amp_safe"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contLayoutStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btnStart"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_navigate_next_black_24dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</RelativeLayout>