<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/colorWhite"
    tools:context=".presentation.view.MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_menu"
        android:layout_gravity="start"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:id="@+id/toolbar"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="3dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fragment_container"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorBlue" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="60dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/covid_19"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/world_data"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:padding="10dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:text="@string/infected"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:id="@+id/numberInfect"
                                android:textAlignment="center"
                                android:textColor="@color/colorRed"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_margin="10dp"
                                    android:layout_weight="1"
                                    android:fontFamily="casual"
                                    android:text="@string/recovered"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:id="@+id/numberRecov"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorGreen"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:layout_weight="1"
                                    android:fontFamily="casual"
                                    android:text="@string/deceased"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:id="@+id/numberDeath"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorCard"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />


                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/precautions"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/stay_home"></ImageView>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>